feat:백엔드 빌드와실행, caddy 리버스 프록시 실행 스크립트